fixing overflow

--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ time, mark, audio, video {
   font-size: 14px;
   font: inherit;
   vertical-align: baseline;
+  overflow-x: hidden;
 }
 
 /* HTML5 display-role reset for older browsers */
