--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -19,6 +19,7 @@ time, mark, audio, video {
 	font-size: 14px;
 	font: inherit;
 	vertical-align: baseline;
+	overflow-x: hidden;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
